# infra

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  bootstrap.sh
.github/: dependabot.yml  pull_request_template.md
.github/linters/: .gitleaks.toml  .markdown-lint.json  .markdown-lint.yml  .ruff.toml  .yaml-lint.yml
.github/scripts/: set-deploy-env.sh
.github/workflows/: bump-prs.yml  bump-version.yml  cdk8s-synth.yml  cdk8s.yml  k8s-lint.yml  linting.yml  pre-commit.yml  release.yml  (+6 more)
cdk8s/: .gitignore  .mise.toml  README.md  cdk8s.yaml  contract.json  dashcam-nfs.local.env.example  main.py  pyproject.toml  versions.yaml
cdk8s/adanalife_k8s/: appconfig.py  charts.py  config.py  configmap.py  contract.py  eso.py  helm_platform.py  naming.py  priority.py  supporting.py
cdk8s/adanalife_k8s/constructs/: arc.py  argo_platform.py  argocd.py  cnpg.py  dashcam.py  dashcam_cv.py  mediamtx.py  obs.py  onscreens.py  postgres.py  tripbot.py  ups_monitor.py  vlc.py
cdk8s/crds/: issuers.cert-manager.io.yaml
cdk8s/tests/: parity.py
cdk8s/tests/integration/: README.md  conftest.py  test_workloads.py
cdk8s/tests/unit/: test_arc.py  test_argo_platform.py  test_argocd.py  test_cnpg.py  test_dashcam_cv.py  test_data_namespace.py  test_obs.py  test_onscreens.py  test_parity.py  test_postgres.py  test_smoke.py  test_supporting.py  test_tripbot.py  test_ups_monitor.py  test_vlc.py
gitops/: README.md
k8s/: .gitignore  k3d-config.bees.local.yaml.example  k3d-config.bees.yaml  k3d-config.empty.yaml  k3d-config.yaml
(+412 files in other folders)
