[project]
name = "adanalife-k8s"
version = "0.1.0"
description = "cdk8s (Python) authoring layer for the adanalife Kubernetes deployments"
requires-python = ">=3.12"
dependencies = [
    "cdk8s>=2.69",
    "cdk8s-plus-30>=2.0",
    "constructs>=10.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "kubernetes>=31",
    "rich>=13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# Default run = synth-time tests only (unit + parity + contract). The
# integration suite needs a live cluster with the cdk8s manifests applied, so
# it's opt-in: `uv run pytest tests/integration --env stage-1` (an explicit path
# arg overrides testpaths). Keeps the default run + CI offline.
testpaths = ["tests/unit"]
pythonpath = ["."]
